# strange_painter

./: Cargo.toml  README.md  example.yaml  grayscale.sh  with_palette.sh
src/: main.rs  painter.rs  palette.rs
