[package]
name = "strange_painter"
version = "0.1.0"
authors = ["Alexandrov Evgeniy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.27.0"
num-complex = "0.2.4"
rayon = "1.1"
indicatif = "0.14.0"